--- a/package.json
+++ b/package.json
@@ -24,7 +24,11 @@
     "@nestjs/core": "^10.0.0",
     "@nestjs/platform-express": "^10.0.0",
     "@prisma/client": "^5.9.1",
+    "@types/multer": "^1.4.11",
+    "buffer-to-stream": "^1.0.0",
+    "cloudinary": "^2.0.2",
     "dotenv": "^16.4.4",
+    "multer": "^1.4.5-lts.1",
     "prisma": "^5.9.1",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1"
