--- a/package.json
+++ b/package.json
@@ -24,8 +24,10 @@
     "@nestjs/config": "^3.2.0",
     "@nestjs/core": "^10.0.0",
     "@nestjs/jwt": "^10.2.0",
+    "@nestjs/mapped-types": "*",
     "@nestjs/passport": "^10.0.3",
     "@nestjs/platform-express": "^10.0.0",
+    "@nestjs/swagger": "^7.3.0",
     "@prisma/client": "^5.9.1",
     "@types/bcrypt": "^5.0.2",
     "@types/multer": "^1.4.11",
