--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "cloudinary": "^2.0.2",
     "dotenv": "^16.4.4",
     "moment": "^2.30.1",
+    "multer": "^1.4.5-lts.1",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
     "prisma": "^5.9.1",
